src/objects/APTS_Conversion_Order_Options__mdt.object
<CustomObject>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APTS Conversion Order Option</label>
    <pluralLabel>APTS Conversion Order Option</pluralLabel>
</CustomObject>